# KDE_CHATGPT

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h
